Version 0.14.0~dev

	* Drop unmaintained administration interface.

Version 0.13.4 Released on 2011/12/20

	* Fix invalid field name in SQL functions.
	* Prevent group_add_objects() from creating groups, closes: #5215.

Version 0.13.3 Released on 2011/11/10

	* Replace database schema by a postgres dump.
	* Update database schema with new defaults and constraints.
	* Drop old migration snippets and unrelated schema updates.
	* Add unit test for get_checks, when 'params' is None, closes: #4001.
	* Fix a typo in test_service.py and test_service_get_checks.py.

Version 0.13.2 Released on 2011/10/06

	* Fix next_check_expired parameter handling, closes: #4950.

Version 0.13.1 Released on 2011/10/03

	* Fix get_checks method, when 'params' is None, closes: #4884.
	* Fix unit test get_status and get_checks.

Version 0.13.0 Released on 2011/09/08

	* Fix the Authors section of README.rst.
	* Add missing COPYING.
	* Change reschedule_check to allow adding a delay, closes: #4626.
	* Re-sync documentation with code.
	* Fix a typo in delay code for reschedule_check, refs: #4626.

Version 0.12.1 Released on 2011/04/26

	* Release under the LGPL 2.1.

Version 0.12.0 Released on 2011/04/26

	* Split collect code into its own webengine package.

Version 0.11.0 Released on 2011/03/09

	* Adapt to new widgets and templates system.
	* Enhanced reschedule_check to take a batch of status_id,
	  closes: #3737.
	* Create internal api methods for get_groups and get_objects and
	  wrap them into exposed webengine methods, refs: #3927.
	* Add methods to manage objects-groups and relations, closes: #3927.
	* Fix some typographic mistakes in services.py, refs: 3927.
	* Add an option to get_groups to make it return associated objects,
	  closes: #3947.
	* Change behavior of get_status to always returns same kind of dictionaries,
	  refs: #3942.
	* Adapt get_checks to keep old behavior, refs: #3942.
	* Add private functions for future cleaning of get_status, refs: #3942.