@@ -1,8 +1,8 @@
 webengine-spv (0.14.0~dev-1) unstable; urgency=low
 
-  * New upstream release.
+  * New upstream release, closes: #4478.
 
- -- Gilles Dartiguelongue <gilles.dartiguelongue@smartjog.com>  Mon, 06 Feb 2012 19:15:03 +0100
+ -- Jonathan Billaud <jonathan.billaud@smartjog.com>  Wed, 28 Mar 2012 18:28:20 +0200
 
 webengine-spv (0.13.4-1) unstable; urgency=low
 
